--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>中国铁路物联网智慧平台</title>
+  <title>监管云系统界面</title>
 
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -277,179 +277,42 @@
     <div class="content-wrapper">
       <!-- 主页面 -->
       <section class="content">
-        <div class="box-wrapper">
-          <div class="row  margin-b-20 ">
-            <div class="col-sm-5 col-xs-12">
-              <div class="box">
-                <div class="box-header">
-                  <h3 class="box-title">桥梁监测情况</h3>
-                </div>
-                <div class="box-body">
-                  <div class="row">
-                    <div class="col-sm-3 col-xs-12">
-                      <div class="graphic">
-                        <div class="circle-icon icon-bridge circle-icon-large  blue-bg"></div>
-                        <div class="num">158</div>
-                        <div class="desc">全部监控桥梁</div>
-                      </div>
-                    </div>
-                    <div class="col-sm-9 col-xs-12">
-                      <div class="row">
-                        <div class="col-xs-6">
-                          <div class="graphic graphic-horizontal">
-                            <div class="circle-icon icon-bridge green-bg"></div>
-                            <div class="desc">正常桥梁</div>
-                            <div class="num">58</div>
-                          </div>
-
-                        </div>
-                        <div class="col-xs-6">
-                          <div class="graphic graphic-horizontal">
-                            <div class="circle-icon icon-bridge red-bg"></div>
-                            <div class="desc">正常桥梁</div>
-                            <div class="num">58</div>
-                          </div>
-                        </div>
-                        <div class="col-xs-6">
-                          <div class="graphic graphic-horizontal">
-                            <div class="circle-icon icon-bridge yellow-bg"></div>
-                            <div class="desc">正常桥梁</div>
-                            <div class="num">58</div>
-                          </div>
-                        </div>
-                        <div class="col-xs-6">
-                          <div class="graphic graphic-horizontal">
-                            <div class="circle-icon icon-bridge gray-bg"></div>
-                            <div class="desc">正常桥梁</div>
-                            <div class="num">58</div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-3 col-xs-6">
-              <div class="box">
-                <div class="box-header">
-                  <h3 class="box-title">桥梁监测情况</h3>
-                </div>
-                <div class="box-body">
-                  <!-- charts容器 -->
-                  <div class="chart" id="pieChart" style="height:200px;">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-3 col-xs-6">
-              <div class="box">
-                <div class="box-header">
-                  <h3 class="box-title">告警占比</h3>
-                </div>
-                <div class="box-body">
-                  <!-- charts容器 -->
-                  <div class="chart" id="pieChart1" style="height:200px;">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- 增长趋势 -->
-        <div class="box-wrapper margin-b-20">
-          <div class="row">
-            <!-- 增长趋势左侧 -->
-            <div class="col-sm-9 col-xs-12">
-              <div class="box">
-                <div class="box-header">
-                  <h3 class="box-title">增长趋势</h3>
-                </div>
-                <div class="box-body">
-                  <!-- charts容器 -->
-                  <div class="chart" id="scatterChart" style="height:250px;"></div>
-                </div>
-              </div>
-            </div>
-            <!--/. 增长趋势左侧 -->
-
-            <!-- 位移量排名 -->
-            <div class="col-sm-3 col-xs-12">
-              <div class="box">
-                <div class="box-header">
-                  <h3 class="box-title">20185月位移量排名</h3>
-                </div>
-                <div class="box-body">
-                  <div class="process-group">
-                    <div class="progress_bar progress-bar-primary">
-                      <div class="pro-bar">
-                        <small class="progress_bar_title">
-                          WY-5-1-1
-                          <span class="progress_number">89</span>
-                        </small>
-                        <span class="progress-bar-inner" style="width: 89%;" data-value="89" data-percentage-value="89"></span>
-                      </div>
-                    </div>
-
-                    <div class="progress_bar progress-bar-danger">
-                      <div class="pro-bar">
-                        <small class="progress_bar_title">
-                          WY-5-1-4
-                          <span class="progress_number">75</span>
-                        </small>
-                        <span class="progress-bar-inner" style="width: 75%;" data-value="75" data-percentage-value="75"></span>
-                      </div>
-                    </div>
-
-                    <div class="progress_bar progress-bar-success">
-                      <div class="pro-bar">
-                        <small class="progress_bar_title">
-                          WY-5-2-1
-                          <span class="progress_number">65</span>
-                        </small>
-                        <span class="progress-bar-inner" style="width: 65%;" data-value="65" data-percentage-value="65"></span>
-                      </div>
-                    </div>
-
-                    <div class="progress_bar progress-bar-warning">
-                      <div class="pro-bar">
-                        <small class="progress_bar_title">
-                          WY-5-1-1
-                          <span class="progress_number">95</span>
-                        </small>
-                        <span class="progress-bar-inner" style="width: 95%;" data-value="95" data-percentage-value="95"></span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- /.位移量排名 -->
-          </div>
-        </div>
+       
         <div class="row margin-b-20">
+            <div class="col-sm-3 col-xs-12">
+                <div class="box-wrapper ">
+                  <div class="box">
+                    <div class="box-header">
+                      <h3 class="box-title">行业风险指数</h3>
+                    </div>
+                    <div class="box-body">
+                      <!-- charts容器 -->
+                    </div>
+                  </div>
+                </div>
+              </div>
           <div class="col-sm-6 col-xs-12">
             <div class="box-wrapper ">
               <div class="box">
                 <div class="box-header">
-                  <h3 class="box-title">温度与位移相关性分析</h3>
+                  <h3 class="box-title">企业成交额及增速</h3>
                 </div>
                 <div class="box-body">
                   <!-- charts容器 -->
-                  <div class="chart" id="lineChart" style="height:250px;"></div>
+                  <div class="echarts-line1" id="echarts-line1" style="height:280px;"></div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-xs-12">
+          <div class="col-sm-3 col-xs-12">
             <div class="box-wrapper">
               <div class="box">
                 <div class="box-header">
-                  <h3 class="box-title">变化排名</h3>
+                  <h3 class="box-title">风险企业排行榜</h3>
                 </div>
                 <div class="box-body">
                   <!-- charts容器 -->
-                  <div class="chart" id="chart1" style="height:250px;"></div>
+                  <div class="echarts-progress" id="echarts-progress" style="height:280px;"></div>
                 </div>
               </div>
             </div>
@@ -458,218 +321,124 @@
 
         <!-- floo3 -->
         <div class="row  margin-b-20">
-          <div class="col-sm-9 col-xs-12">
+          <div class="col-sm-3 col-xs-12">
             <div class="box-wrapper">
-              <div class="row">
-                <!-- 健康状态 -->
-                <div class="col-sm-4 col-xs-12">
+                <!-- 企业分布 -->
                   <div class="box">
                     <div class="box-header">
-                      <h3 class="box-title">健康状态</h3>
+                      <h3 class="box-title">企业分布</h3>
                     </div>
                     <div class="box-body">
                       <!-- charts容器 -->
-                      <div class="chart" id="pieChart2" style="height:200px;"></div>
+                      <div class="echarts-pie" id="echarts-pie" style="height:336px;"></div>
                     </div>
                   </div>
-                </div>
-                <!-- /.健康状态 -->
-                <!-- 病态桥梁分析 -->
-                <div class="col-sm-8 col-xs-12">
-                  <div class="box">
-                    <div class="box-header">
-                      <h3 class="box-title">病态桥梁信息</h3>
-                    </div>
-                    <div class="box-body">
-                      <table class="table">
-                        <thead>
-                          <tr>
-                            <th>问题桥梁名称</th>
-                            <th>桥梁风险预估原因</th>
-                            <th>问题名称</th>
-                            <th>问题名称</th>
-                            <th>问题名称</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            <th>wy-1-2-3-4</th>
-                            <td>温度变化</td>
-                            <td>客运量增加</td>
-                            <td>温度变化</td>
-                            <td>临时文字</td>
-                          </tr>
-                          <tr>
-                            <th>wy-1-2-3-4</th>
-                            <td>温度变化</td>
-                            <td>客运量增加</td>
-                            <td>温度变化</td>
-                            <td>临时文字</td>
-                          </tr>
-                          <tr>
-                            <th>wy-1-2-3-4</th>
-                            <td>温度变化</td>
-                            <td>客运量增加</td>
-                            <td>温度变化</td>
-                            <td>临时文字</td>
-                          </tr>
-                          <tr>
-                            <th>wy-1-2-3-4</th>
-                            <td>温度变化</td>
-                            <td>客运量增加</td>
-                            <td>温度变化</td>
-                            <td>临时文字</td>
-                          </tr>
-                          <tr>
-                            <th>wy-1-2-3-4</th>
-                            <td>温度变化</td>
-                            <td>客运量增加</td>
-                            <td>温度变化</td>
-                            <td>临时文字</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                  </div>
-                </div>
-                <!-- /.病态桥梁分析 -->
-              </div>
+                <!-- /.企业分布 -->
             </div>
           </div>
-          <!-- 健康评分排行榜 -->
-          <div class="col-sm-3 col-xs-12">
+          <!-- 逾期率 -->
+          <div class="col-sm-6 col-xs-12">
             <div class="box-wrapper">
               <div class="box">
                 <div class="box-header">
-                  <h3 class="box-title">健康评分排行榜</h3>
+                  <h3 class="box-title">逾期率</h3>
                 </div>
                 <div class="box-body">
-                  <table class="table table-rank">
-                    <thead>
-                      <tr>
-                        <th>排名</th>
-                        <th>桥梁名称</th>
-                        <th>排名变化</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>1</td>
-                        <td>WY-5-0-1-1</td>
-                        <td>
-                          <i class="rank-up"></i>
-                          <span>2</span>
-                        </td>
-
-                      </tr>
-                      <tr>
-                        <td>2</td>
-                        <td>WY-5-0-1-1</td>
-                        <td>
-                          <i class="rank-down"></i>
-                          <span>3</span>
-                        </td>
-
-                      </tr>
-                      <tr>
-                        <td>3</td>
-                        <td>WY-5-0-1-1</td>
-                        <td>
-                          <i class="rank-up"></i>
-                          <span>4</span>
-                        </td>
-
-                      </tr>
-                      <tr>
-                        <td>4</td>
-                        <td>WY-5-0-1-1</td>
-                        <td>
-                          <i class="rank-up"></i>
-                          <span>2</span>
-                        </td>
-
-                      </tr>
-
-                    </tbody>
-
-                  </table>
+                    <div class="echarts-pictographBar" id="echarts-pictographBar" style="height:336px;"></div>
                 </div>
               </div>
 
             </div>
           </div>
-          <!-- /. 健康评分排行榜 -->
+          <!-- /. 饼状图 -->
+          <div class="col-sm-3 col-xs-12">
+              <div class="box-wrapper">
+                <div class="box">
+                  <div class="box-header">
+                    <h3 class="box-title">饼状图</h3>
+                  </div>
+                  <div class="box-body">
+                      <div class="echarts-pie2" id="echarts-pie2" style="height:336px;"></div>
+                  </div>
+                </div>
+  
+              </div>
+            </div>
         </div>
         <!-- end floo3 -->
 
         <!-- floor4 -->
-        <div class="box-wrapper margin-b-20">
-          <div class="row">
-            <!-- 预测左侧 -->
-            <div class="col-sm-9 col-xs-12">
+          <div class="row margin-b-20">
+            <!-- 往期指标 -->
+            <div class="col-sm-6 col-xs-12">
+                <div class="box-wrapper">
               <div class="box">
                 <div class="box-header">
-                  <h3 class="box-title">预测</h3>
+                  <h3 class="box-title">往期指标</h3>
+                  <!-- <div class="box-right-nav">
+                    <ul>
+                      <li></li>
+                    </ul>
+                  </div> -->
                 </div>
                 <div class="box-body">
-                  <div class="chart" id="scatterChart1" style="height:250px;"></div>
+                    <div class="echarts-bar" id="echarts-bar" style="height:340px;"></div>
                 </div>
               </div>
             </div>
-
-            <!-- 预测右侧 -->
-            <div class="col-sm-3 col-xs-12">
+        </div>
+            <!-- 往期指标 -->
+            <div class="col-sm-6 col-xs-12">
+                <div class="box-wrapper">
               <div class="box">
                 <!--为了布局美观， 即使box-header内容为空也要写上 -->
                 <div class="box-header">
+                    <h3 class="box-title">往期指标</h3>
                 </div>
                 <div class="box-body">
-                  <!-- 地图前台没法实现 -->
-                  <img src="../../imgs/common/demo.png" alt="">
+                  <div class="echarts-bar2" id="echarts-bar2" style="height:340px;"></div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
+          </div>
         <!-- /. floor4 -->
 
         <!-- floor5 -->
         <div class="row margin-b-20">
-          <!-- 维修情况 -->
-          <div class="col-sm-9 col-xs-12">
+          <!-- 折线图 -->
+          <div class="col-sm-6 col-xs-12">
             <div class="box-wrapper">
               <div class="box">
                 <div class="box-header">
-                  <h3 class="box-title">维修情况</h3>
+                  <h3 class="box-title">折线图</h3>
                 </div>
                 <div class="box-body">
-                  <div id="bridgeChart" class="bridge-chart" style="height:200px;">
-
+                    <div class="echarts-line2" id="echarts-line2" style="height:300px;"></div>
                   </div>
                 </div>
               </div>
             </div>
 
-          </div>
-          <!-- /.维修情况 -->
+         
+          <!-- /.折线图 -->
 
-          <!-- 维修状态占比 -->
-          <div class="col-sm-3 col-xs-12">
+          <!-- 风险信息概况 -->
+          <div class="col-sm-6 col-xs-12">
             <div class="box-wrapper">
               <div class="box">
                 <div class="box-header">
-                  <h3 class="box-title">维修状态占比</h3>
+                  <h3 class="box-title">风险信息概况</h3>
                 </div>
                 <div class="box-body">
-                  <div class="chart" id="pieChart3" style="height:200px;"></div>
+                    <div class="echarts-radar" id="echarts-radar" style="height:300px;"></div>
                 </div>
               </div>
             </div>
-
+            </div>
           </div>
-          <!-- /.维修状态占比 -->
+          <!-- /.风险信息概况 -->
         </div>
-        <!-- end floor5 -->
       </section>
       <!-- /.content -->
     </div>
@@ -706,10 +475,14 @@
   <!-- echarts-v3  百度echarts3-->
   <script src="../../plugins/echarts-v3/echarts.min.js"></script>
   <!-- 引入自定义echart -->
-  <script src="../../plugins/echarts-v3/common.js"></script>
-  <script src="../../plugins/echarts-v3/pieChart.js"></script>
-  <script src="../../plugins/echarts-v3/lineChart.js"></script>
-  <script src="../../plugins/echarts-v3/PictorialBar.js"></script>
+  <!-- <script src="../js/jquery-2.1.1.min.js"></script> -->
+      <!-- <script src="../js/echarts.min.js"></script> -->
+      <script src="./js/echarts-line1.js"></script>
+        <script src="./js/echarts-progress.js"></script>
+        <script src="./js/echarts-pie.js"></script>
+        <script src="./js/echarts-pictograph-bar.js"></script>
+        <script src="./js/echarts-bar.js"></script>
+        <script src="./js/echarts-radar.js"></script>
   <!-- components 自主开发组件-->
   <script src="../../components/bridge-chart/js/bridge-chart.js"></script>
   <!-- 用户js -->
