--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -57,7 +57,9 @@
           <ul class="nav navbar-nav">
             <li class="navbar-active">
               <a href="##">
-                <i class="icon navbar-icon1"></i>
+                <span class="icon navbar-icon1">
+                  <i class="icon-inner"></i>
+                </span>
                 <span>社会众筹机构P2P</span>
               </a>
             </li>
@@ -81,7 +83,9 @@
             </li>
             <li>
               <a href="##">
-                <i class="icon navbar-icon5"></i>
+                <i class="icon navbar-icon5">
+
+                </i>
                 <span>融资租赁公司</span>
               </a>
             </li>
