--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -342,8 +342,16 @@
               <div class="box">
                 <div class="box-header">
                   <h3 class="box-title">逾期率</h3>
+                  
                 </div>
                 <div class="box-body">
+                  <!-- <div class="w100" style="width:100%;">
+                      <ul class=“list-legend”>
+                          <li>高于2.5</li>
+                          <li>高于1</li>
+                          <li>低于2.5</li>
+                        </ul>
+                  </div> -->
                     <div class="echarts-pictographBar" id="echarts-pictographBar" style="height:336px;"></div>
                 </div>
               </div>
