--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -39,11 +39,11 @@
     <!-- header -->
     <header class="main-header">
       <div class="sys-toggle">
-        <div class="logo1"></div>
+        <div class="header-logo logo1"></div>
         <a href="##" class="dropdown-toggle" data-toggle="dropdown">系统切换</a>
         <div class="dropdown-menu" data-stopPropagation='true'>
           <ul>
-            <li class="logo2 active"></li>
+            <li class="logo2"></li>
             <li class="logo3"></li>
             <li class="logo4"></li>
             <li class="logo5"></li>
