--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -349,7 +349,26 @@
     <div class="content-wrapper">
       <!-- 主页面 -->
       <section class="content">
-       
+          <div class="row margin-b-20">
+          <div class="col-sm-12 col-xs-12">
+              <div class="box-wrapper">
+                <div class="box">
+                 
+                  <div class="box-body" style="padding:0;">
+                      <div class="header-information">
+                        <ul class="header-info-list">
+                          <li>sfdf</li>
+                          <li>sfdf</li>
+                          <li>sfdf</li>
+                          <li>sfdf</li>
+                          <li>sfdf</li>
+                        </ul>
+                      </div>
+                  </div>
+                </div>
+                </div>
+            </div>
+            </div>
         <div class="row margin-b-20">
             <div class="col-sm-3 col-xs-12">
                 <div class="box-wrapper ">
