--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -38,7 +38,7 @@
     <!-- header -->
     <header class="main-header">
       <div class="sys-toggle">
-        <div class="logo1"></div>
+        <div class="header-logo logo1"></div>
         <a href="##" class="dropdown-toggle" data-toggle="dropdown">系统切换</a>
         <div class="dropdown-menu" data-stopPropagation='true'>
           <ul>
