--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -103,7 +103,7 @@
             </li>
           </ul>
           <a href="##" class="dropdown-toggle" data-toggle="dropdown"><i class="arrow-down"></i></a>
-          <div class="dropdown-menu" data-stopPropagation='true'>
+          <div class="dropdown-menu" data-stopPropagation="true">
             <ul class="nav navbar-nav" style="padding-left:20px;">
               <li><a href="##">区域性股权交易</a></li>
               <li><a href="##">商业保理公司</a></li>
@@ -416,7 +416,39 @@
                       <h3 class="box-title">行业风险指数</h3>
                     </div>
                     <div class="box-body">
-                      <!-- charts容器 -->
+                      <div class="shiel clearfix">
+                          <div class="left-shiel"></div>
+                          <div class="right-shiel clearfix">
+                            <dl class="clearfix">
+                              <dt><img src="imgs/img-icon1.png"></dt>
+                              <dd>
+                                <span class="list-title">信用风险</span>
+                                <span class="list-number">10</span>
+                              </dd>
+                            </dl>
+                            <dl class="clearfix">
+                                <dt><img src="imgs/img-icon2.png"></dt>
+                                <dd>
+                                  <span class="list-title">操作风险</span>
+                                  <span class="list-number">30</span>
+                                </dd>
+                              </dl>
+                              <dl class="clearfix">
+                                  <dt><img src="imgs/img-icon3.png"></dt>
+                                  <dd>
+                                    <span class="list-title">管理风险</span>
+                                    <span class="list-number">20</span>
+                                  </dd>
+                                </dl>
+                                <dl class="clearfix">
+                                    <dt><img src="imgs/img-icon4.png"></dt>
+                                    <dd>
+                                      <span class="list-title">经营风险</span>
+                                      <span class="list-number">40</span>
+                                    </dd>
+                                  </dl>
+                          </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -429,7 +461,7 @@
                 </div>
                 <div class="box-body">
                   <!-- charts容器 -->
-                  <div class="echarts-line1" id="echarts-line1" style="height:280px;"></div>
+                  <div class="echarts-line1" id="echarts-line1" style="height:240px;"></div>
                 </div>
               </div>
             </div>
@@ -442,7 +474,7 @@
                 </div>
                 <div class="box-body">
                   <!-- charts容器 -->
-                  <div class="echarts-progress" id="echarts-progress" style="height:280px;"></div>
+                  <div class="echarts-progress" id="echarts-progress" style="height:240px;"></div>
                 </div>
               </div>
             </div>
