--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -345,7 +345,7 @@
     <!-- /.左侧栏 -->
 
     <!-- 内容包装器,包含页面内容 -->
-    <div class="content-wrapper">
+    <div class="content-wrapper" style="background:#f6f6f6;">
       <!-- 主页面 -->
       <section class="content">
           <div class="row margin-b-20">
