--- a/pages/nbfc/index.html
+++ b/pages/nbfc/index.html
@@ -63,19 +63,19 @@
                                     <div id="banner_list">
 
                                         <a href="#" target="_blank">
-                                            <img src="imgs/p3.jpg" title="img1" alt="陈雨露副行长出席二十国集团财长和央行行长会议" />
+                                            <img src="imgs/p1_03.jpg" title="img1" alt="111陈雨露副行长出席二十国集团财长和央行行长会议" />
                                         </a>
 
                                         <a href="#" target="_blank">
-                                            <img src="imgs/p2.jpg" title="img2" alt="陈雨露副行长出席二十国集团财长和央行行长会议" />
+                                            <img src="imgs/p1_03.jpg" title="img2" alt="陈雨露副行长出席二十国集团财长和央行行长会议" />
                                         </a>
 
                                         <a href="#" target="_blank">
-                                            <img src="imgs/p3.jpg" title="img3" alt="陈雨露副行长出席二十国集团财长和央行行长会议" />
+                                            <img src="imgs/p1_03.jpg" title="img3" alt="陈雨露副行长出席二十国集团财长和央行行长会议" />
                                         </a>
 
                                         <a href="#" target="_blank">
-                                            <img src="imgs/p1.jpg" title="img4" alt="陈雨露副行长出席二十国集团财长和央行行长会议" />
+                                            <img src="imgs/p1_03.jpg" title="img4" alt="陈雨露副行长出席二十国集团财长和央行行长会议" />
                                         </a>
 
                                     </div>
