--- a/pages/nbfc/detail.html
+++ b/pages/nbfc/detail.html
@@ -15,7 +15,7 @@
             <div class="header">
                 <div class="header__logo"></div>
                 <div class="header__info">
-                    <span class="user">欢迎您：赵四</span>
+                    <span class="user">欢迎您：小江</span>
                     <span class="setting"></span>
                     <span class="sign-out"></span>
                 </div>
