--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -66,7 +66,7 @@
                 <span class="icon navbar-icon1">
                   <i class="icon-inner"></i>
                 </span>
-                <span>社会众筹机构P2P</span>
+                <span>小额贷款公司</span>
               </a>
             </li>
             <li>
@@ -74,7 +74,7 @@
                 <span class="icon navbar-icon2">
                   <i class="icon-inner"></i>
                 </span>
-                <span>小额贷款公司</span>
+                <span>融资担保公司</span>
               </a>
             </li>
             <li>
@@ -82,7 +82,7 @@
                   <span class="icon navbar-icon3">
                       <i class="icon-inner"></i>
                     </span>
-                <span>融资担保公司</span>
+                <span>区域性股权交易</span>
               </a>
             </li>
             <li>
@@ -110,14 +110,14 @@
                   <span class="icon navbar-icon5">
                       <i class="icon-inner"></i>
                     </span>
-                <span>区域性股权交易</span>
+                <span>商业保理公司</span>
                 </a>
               </li>
               <li><a href="##">
                   <span class="icon navbar-icon5">
                       <i class="icon-inner"></i>
                     </span>
-                <span>商业保理公司</span>
+                <span>地方资产公司</span>
                 </a>
               </li>
               <li>
@@ -125,7 +125,7 @@
                   <span class="icon navbar-icon5">
                       <i class="icon-inner"></i>
                     </span>
-                <span>地方资产公司</span>
+                <span>农民专业合作社</span>
               </a>
             </li>
               <li>
@@ -133,7 +133,7 @@
                   <span class="icon navbar-icon5">
                       <i class="icon-inner"></i>
                     </span>
-                <span>农民专业合作社</span>
+                <span>社会众筹机构P2P</span>
                 </a>
               </li>
               <li><a href="##">
@@ -627,7 +627,7 @@
                   <h3 class="box-title">折线图</h3>
                 </div>
                 <div class="box-body">
-                    <div class="echarts-line2" id="echarts-line2" style="height:300px;"></div>
+                    <div sclass="echarts-line2" id="echarts-line2" style="height:300px;"></div>
                   </div>
                 </div>
               </div>
