--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -22,7 +22,7 @@
 
 
   <!-- bootstrap wysihtml5 - text editor -->
-  <link rel="stylesheet" href="../../plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+  <!-- <link rel="stylesheet" href="../../plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css"> -->
 
 
   <!--[if lt IE 9]>
@@ -701,8 +701,8 @@
   <!-- <script src="../../components/bridge-chart/js/bridge-chart.js"></script> -->
   <!-- 用户js -->
 
-  <script src="../../common-js/common.js"></script>
-  <script src="../../common-js/index.js"></script>
+  <!-- <script src="../../common-js/common.js"></script> -->
+  <!-- <script src="../../common-js/index.js"></script> -->
 </body>
 
 </html>
