--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -155,40 +155,44 @@
 
       <section class="sidebar">
 
-        <ul class="sidebar-menu" data-widget="tree">
+        <ul class="sidebar-menu">
           <li class="active treeview">
-            <a href="#">
+            <a href="##">
               <i class="slide-icon slide-icon1"></i>
               <span class="slide-title">首页</span>
               <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
               </span>
             </a>
-            <ul class="treeview-menu">
-              <li class="active">
-                <a href="##">准入审核</a>
-                <ul class="third-menu">
-                  <li><a href="##">制度包管理</a></li>
-                  <li><a href="##">报表配置设置</a></li>
-                  <li><a href="##">制度包管理</a></li>
-                  <li><a href="##">报表配置设置</a></li>
-                  <li><a href="##">制度包管理</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="##">报送配置</a>
-                <ul class="third-menu">
+            <div class="treeview-menu">
+              <span class="arrow"></span>
+              <ul class="treeview-menu-inner">
+                <li class="active">
+                  <a href="##">准入审核</a>
+                  <ul class="third-menu">
                     <li><a href="##">制度包管理</a></li>
                     <li><a href="##">报表配置设置</a></li>
                     <li><a href="##">制度包管理</a></li>
                     <li><a href="##">报表配置设置</a></li>
                     <li><a href="##">制度包管理</a></li>
                   </ul>
-              </li>
-              <li>
-                <a href="##">报送配置</a>
-              </li>
-            </ul>
+                </li>
+                <li>
+                  <a href="##">报送配置</a>
+                  <ul class="third-menu">
+                      <li><a href="##">制度包管理</a></li>
+                      <li><a href="##">报表配置设置</a></li>
+                      <li><a href="##">制度包管理</a></li>
+                      <li><a href="##">报表配置设置</a></li>
+                      <li><a href="##">制度包管理</a></li>
+                    </ul>
+                </li>
+                <li>
+                  <a href="##">报送配置</a>
+                </li>
+              </ul>
+            </div>
+            
           </li>
           <li class="treeview">
             <a href="#">
@@ -198,31 +202,35 @@
                 <span class="label label-primary pull-right">4</span>
               </span>
             </a>
-            <ul class="treeview-menu">
-              <li class="active">
-                <a href="##">准入审核</a>
-                <ul class="third-menu">
-                  <li><a href="##">制度包管理</a></li>
-                  <li><a href="##">报表配置设置</a></li>
-                  <li><a href="##">制度包管理</a></li>
-                  <li><a href="##">报表配置设置</a></li>
-                  <li><a href="##">制度包管理</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="##">报送配置</a>
-                <ul class="third-menu">
-                    <li><a href="##">制度包管理</a></li>
-                    <li><a href="##">报表配置设置</a></li>
-                    <li><a href="##">制度包管理</a></li>
-                    <li><a href="##">报表配置设置</a></li>
-                    <li><a href="##">制度包管理</a></li>
+            <div class="treeview-menu">
+                <span class="arrow"></span>
+                <ul class="treeview-menu-inner">
+                    <li class="active">
+                      <a href="##">准入审核</a>
+                      <ul class="third-menu">
+                        <li><a href="##">制度包管理</a></li>
+                        <li><a href="##">报表配置设置</a></li>
+                        <li><a href="##">制度包管理</a></li>
+                        <li><a href="##">报表配置设置</a></li>
+                        <li><a href="##">制度包管理</a></li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a href="##">报送配置</a>
+                      <ul class="third-menu">
+                          <li><a href="##">制度包管理</a></li>
+                          <li><a href="##">报表配置设置</a></li>
+                          <li><a href="##">制度包管理</a></li>
+                          <li><a href="##">报表配置设置</a></li>
+                          <li><a href="##">制度包管理</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                      <a href="##">报送配置</a>
+                    </li>
                   </ul>
-              </li>
-              <li>
-                <a href="##">报送配置</a>
-              </li>
-            </ul>
+            </div>
+           
           </li>
           <li class="treeview">
             <a href="pages/widgets.html">
@@ -232,31 +240,34 @@
                 <small class="label pull-right bg-green">new</small>
               </span>
             </a>
-            <ul class="treeview-menu">
-              <li class="active">
-                <a href="##">准入审核</a>
-                <ul class="third-menu">
-                  <li><a href="##">制度包管理</a></li>
-                  <li><a href="##">报表配置设置</a></li>
-                  <li><a href="##">制度包管理</a></li>
-                  <li><a href="##">报表配置设置</a></li>
-                  <li><a href="##">制度包管理</a></li>
+           <div class="treeview-menu">
+              <span class="arrow"></span>
+              <ul class="treeview-menu-inner">
+                  <li class="active">
+                    <a href="##">准入审核</a>
+                    <ul class="third-menu">
+                      <li><a href="##">制度包管理</a></li>
+                      <li><a href="##">报表配置设置</a></li>
+                      <li><a href="##">制度包管理</a></li>
+                      <li><a href="##">报表配置设置</a></li>
+                      <li><a href="##">制度包管理</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="##">报送配置</a>
+                    <ul class="third-menu">
+                        <li><a href="##">制度包管理</a></li>
+                        <li><a href="##">报表配置设置</a></li>
+                        <li><a href="##">制度包管理</a></li>
+                        <li><a href="##">报表配置设置</a></li>
+                        <li><a href="##">制度包管理</a></li>
+                      </ul>
+                  </li>
+                  <li>
+                    <a href="##">报送配置</a>
+                  </li>
                 </ul>
-              </li>
-              <li>
-                <a href="##">报送配置</a>
-                <ul class="third-menu">
-                    <li><a href="##">制度包管理</a></li>
-                    <li><a href="##">报表配置设置</a></li>
-                    <li><a href="##">制度包管理</a></li>
-                    <li><a href="##">报表配置设置</a></li>
-                    <li><a href="##">制度包管理</a></li>
-                  </ul>
-              </li>
-              <li>
-                <a href="##">报送配置</a>
-              </li>
-            </ul>
+           </div>
           </li>
           <li class="treeview">
             <a href="#">
@@ -266,31 +277,34 @@
                 <i class="fa fa-angle-left pull-right"></i>
               </span>
             </a>
-           <ul class="treeview-menu">
-              <li class="active">
-                <a href="##">准入审核</a>
-                <ul class="third-menu">
-                  <li><a href="##">制度包管理</a></li>
-                  <li><a href="##">报表配置设置</a></li>
-                  <li><a href="##">制度包管理</a></li>
-                  <li><a href="##">报表配置设置</a></li>
-                  <li><a href="##">制度包管理</a></li>
+           <div class="treeview-menu">
+              <span class="arrow"></span>
+              <ul class="treeview-menu-inner">
+                  <li class="active">
+                    <a href="##">准入审核</a>
+                    <ul class="third-menu">
+                      <li><a href="##">制度包管理</a></li>
+                      <li><a href="##">报表配置设置</a></li>
+                      <li><a href="##">制度包管理</a></li>
+                      <li><a href="##">报表配置设置</a></li>
+                      <li><a href="##">制度包管理</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="##">报送配置</a>
+                    <ul class="third-menu">
+                        <li><a href="##">制度包管理</a></li>
+                        <li><a href="##">报表配置设置</a></li>
+                        <li><a href="##">制度包管理</a></li>
+                        <li><a href="##">报表配置设置</a></li>
+                        <li><a href="##">制度包管理</a></li>
+                      </ul>
+                  </li>
+                  <li>
+                    <a href="##">报送配置</a>
+                  </li>
                 </ul>
-              </li>
-              <li>
-                <a href="##">报送配置</a>
-                <ul class="third-menu">
-                    <li><a href="##">制度包管理</a></li>
-                    <li><a href="##">报表配置设置</a></li>
-                    <li><a href="##">制度包管理</a></li>
-                    <li><a href="##">报表配置设置</a></li>
-                    <li><a href="##">制度包管理</a></li>
-                  </ul>
-              </li>
-              <li>
-                <a href="##">报送配置</a>
-              </li>
-            </ul>
+           </div>
           </li>
           <li class="treeview">
             <a href="#">
@@ -300,31 +314,34 @@
                 <i class="fa fa-angle-left pull-right"></i>
               </span>
             </a>
-            <ul class="treeview-menu">
-              <li class="active">
-                <a href="##">准入审核</a>
-                <ul class="third-menu">
-                  <li><a href="##">制度包管理</a></li>
-                  <li><a href="##">报表配置设置</a></li>
-                  <li><a href="##">制度包管理</a></li>
-                  <li><a href="##">报表配置设置</a></li>
-                  <li><a href="##">制度包管理</a></li>
+           <div class="treeview-menu">
+              <span class="arrow"></span>
+              <ul class="treeview-menu-inner">
+                  <li class="active">
+                    <a href="##">准入审核</a>
+                    <ul class="third-menu">
+                      <li><a href="##">制度包管理</a></li>
+                      <li><a href="##">报表配置设置</a></li>
+                      <li><a href="##">制度包管理</a></li>
+                      <li><a href="##">报表配置设置</a></li>
+                      <li><a href="##">制度包管理</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="##">报送配置</a>
+                    <ul class="third-menu">
+                        <li><a href="##">制度包管理</a></li>
+                        <li><a href="##">报表配置设置</a></li>
+                        <li><a href="##">制度包管理</a></li>
+                        <li><a href="##">报表配置设置</a></li>
+                        <li><a href="##">制度包管理</a></li>
+                      </ul>
+                  </li>
+                  <li>
+                    <a href="##">报送配置</a>
+                  </li>
                 </ul>
-              </li>
-              <li>
-                <a href="##">报送配置</a>
-                <ul class="third-menu">
-                    <li><a href="##">制度包管理</a></li>
-                    <li><a href="##">报表配置设置</a></li>
-                    <li><a href="##">制度包管理</a></li>
-                    <li><a href="##">报表配置设置</a></li>
-                    <li><a href="##">制度包管理</a></li>
-                  </ul>
-              </li>
-              <li>
-                <a href="##">报送配置</a>
-              </li>
-            </ul>
+           </div>
           </li>
           <li class="treeview">
             <a href="#">
@@ -344,31 +361,34 @@
                 <i class="fa fa-angle-left pull-right"></i>
               </span>
             </a>
-            <ul class="treeview-menu">
-              <li class="active">
-                <a href="##">准入审核</a>
-                <ul class="third-menu">
-                  <li><a href="##">制度包管理</a></li>
-                  <li><a href="##">报表配置设置</a></li>
-                  <li><a href="##">制度包管理</a></li>
-                  <li><a href="##">报表配置设置</a></li>
-                  <li><a href="##">制度包管理</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="##">报送配置</a>
-                <ul class="third-menu">
-                    <li><a href="##">制度包管理</a></li>
-                    <li><a href="##">报表配置设置</a></li>
-                    <li><a href="##">制度包管理</a></li>
-                    <li><a href="##">报表配置设置</a></li>
-                    <li><a href="##">制度包管理</a></li>
+            <div class="treeview-menu">
+                <span class="arrow"></span>
+                <ul class="treeview-menu-inner">
+                    <li class="active">
+                      <a href="##">准入审核</a>
+                      <ul class="third-menu">
+                        <li><a href="##">制度包管理</a></li>
+                        <li><a href="##">报表配置设置</a></li>
+                        <li><a href="##">制度包管理</a></li>
+                        <li><a href="##">报表配置设置</a></li>
+                        <li><a href="##">制度包管理</a></li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a href="##">报送配置</a>
+                      <ul class="third-menu">
+                          <li><a href="##">制度包管理</a></li>
+                          <li><a href="##">报表配置设置</a></li>
+                          <li><a href="##">制度包管理</a></li>
+                          <li><a href="##">报表配置设置</a></li>
+                          <li><a href="##">制度包管理</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                      <a href="##">报送配置</a>
+                    </li>
                   </ul>
-              </li>
-              <li>
-                <a href="##">报送配置</a>
-              </li>
-            </ul>
+            </div>
           </li>
 
         </ul>
@@ -504,7 +524,6 @@
               <div class="box">
                 <div class="box-header">
                   <h3 class="box-title">风险企业排行榜</h3>
-                </div>
                 <div class="box-body">
                   <!-- charts容器 -->
                   <div class="echarts-progress" id="echarts-progress" style="height:240px;"></div>
@@ -675,7 +694,7 @@
     // $.widget.bridge('uibutton', $.ui.button);
   </script>
   <!-- Bootstrap 3.3.7 -->
-  <script src="../../bootstrap/dist/js/bootstrap.min.js"></script>
+  <!-- <script src="../../bootstrap/dist/js/bootstrap.min.js"></script> -->
   <script src="../../bootstrap/dist/js/bootstrap-hover-dropdown.js"></script>
 
 
@@ -701,8 +720,8 @@
   <!-- <script src="../../components/bridge-chart/js/bridge-chart.js"></script> -->
   <!-- 用户js -->
 
-  <!-- <script src="../../common-js/common.js"></script> -->
-  <!-- <script src="../../common-js/index.js"></script> -->
+  <script src="../../common-js/common.js"></script>
+  <script src="../../common-js/index.js"></script>
 </body>
 
 </html>
